--- a/about/pdurbin.mdwn
+++ b/about/pdurbin.mdwn
@@ -6,7 +6,7 @@ You can read more of my work history on [LinkedIn][], which highlights my experi
 
 I jumped at the chance to work on Dataverse because I've been a fan of open source since I discovered it in the late 90s. I first read an open source license after using [VNC][VNC] to solve a problem at work and thought, "This open source stuff is like science, like standing on the shoulders of giants." I love building things, especially an open source product that is growing in adoption around the world.
 
-Writing code is fun, but I also very much enjoy participating in the open source community around Dataverse and other projects. I'm quite active on the [dataverse-community][dataverse-community] mailing list, the [#dataverse][#dataverse] channel on the freenode IRC network, and [bi-weekly calls][calls]. We've started having an annual Dataverse conference which we call a "[community meeting][community meeting]" and it's been thrilling to meet people from around the world who are excited enough about our product to fly in and listen to talks or give one themselves. A group in Norway created a [video][TROLLing] explaining why you'd want to run software like Dataverse. Folks in the Netherlands [baked][cake1] [cakes][cake2] with the Dataverse logo on it. Based on these experiences and more, I'm giving a talk at JavaOne 2017 on [[how to run an open source project|talks/2017/javaone-how-to-run-an-open-source-project]].
+Writing code is fun, but I also very much enjoy participating in the open source community around Dataverse and other projects. I'm quite active on the [dataverse-community][dataverse-community] mailing list, the [#dataverse][#dataverse] channel on the freenode IRC network, and [bi-weekly calls][calls]. We've started having an annual Dataverse conference which we call a "[community meeting][community meeting]" and it's been thrilling to meet people from around the world who are excited enough about our product to fly in and listen to talks or give one themselves. A group in Norway created a [video][TROLLing] explaining why you'd want to run software like Dataverse. Folks in the Netherlands [baked][cake1] [cakes][cake2] with the Dataverse logo on it. Based on these experiences and more, I'm gave a talk at JavaOne 2017 on [[how to run an open source project|talks/2017/javaone-how-to-run-an-open-source-project]].
 
 I spend most of my free time with my [family][]. We like playing with our cats, reading, hiking, orienteering, going to the beach, skiing, cooking, traveling, and playing games. My wife and I bike to work. I play a little guitar. Please feel free to get in touch.
 
