add code.org to intro and fix typo

--- a/teaching-kids-to-code/code.org.mdwn
+++ b/teaching-kids-to-code/code.org.mdwn
@@ -3,4 +3,4 @@ https://code.org is similar to [[Scratch]] and very kid-friendly, with an "hour 
 - Star Wars: https://code.org/starwars
 - Frozen: https://code.org/frozen
 
-With an Hour of Code, you're basically problem solving rather than expressing any creativity but it's a good intro to the block your kids will use in [[Scratch]] or similar.
+With an Hour of Code, you're basically problem solving rather than expressing any creativity but it's a good intro to the blocks your kids will use in [[Scratch]] or similar.
