--- a/teaching-kids-to-code.mdwn
+++ b/teaching-kids-to-code.mdwn
@@ -1,5 +1,7 @@
 I've been teaching my kids how to code on and off since they were six. At a young age, it's better to think of it as creating animations using [[Scratch]] or similar. The older they get and they more they're already playing games, they'll be better at making games.
 
+A good way to start is with [[code.org]].
+
 Coding is much more fun if you can share your work with others. If the kid can bring an iPad to a friend's house, great, use [[Hopscotch]]. If you want to email a link to your game to Grandma, you should probably use [[Scratch]] but until Scratch 3 comes out, Grandma will have to have Flash installed.
 
 If you have Android devices lying around, try [[MIT App Inventor|app-inventor]]. 
