--- a/talks/2017/libreplanet-dataverse-lightning-talk.mdwn
+++ b/talks/2017/libreplanet-dataverse-lightning-talk.mdwn
@@ -1,5 +1,7 @@
 On March 26, 2017 I gave an impromptu five minute "lightning" talk at [LibrePlanet 2017][]. It has been shared at https://media.libreplanet.org/u/libreplanet/m/lightning-talk-philip-durbin/ and I uploaded it to https://www.youtube.com/watch?v=-GUr-cd_OWQ with the following transcription:
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/-GUr-cd_OWQ" frameborder="0" allowfullscreen></iframe>
+
 > Hi, my name's Phil Durbin. I work down the street at Harvard on an open source project called Dataverse. It's Apache-licensed and I don't have anything prepared so I'm going to keep it short and just open it to questions. The problem that it solves is that your tax money is going toward research and hopefully the outputs of that research are being put into open access journals, open access articles. But what about the data that's associated with that research? Dataverse is a platform for hosting research data. In the academic world, you write a paper, you get a DOI for that paper, a digital object identifier, to uniquely identify your paper. But then, if you have some data associated with your paper, what do you do with it? Do you just throw it on your website? Is that website going to be around in 30 years? That's the problem that we're trying to solve, having a permanent place for research data.
 > 
 > If you scroll down on this page [ https://dataverse.org ], you'll see that we have about twenty or so installations across the world that run our software. We have a conference coming up in June just down the street at Harvard. We have APIs for getting data in and out of Dataverse. We integrate with a number of other academic research-oriented sort of things. You see journals up here. Open Journal Systems is a way to host a journal online. We integrate with them so that authors of papers can deposit seamlessly from Open Journal Systems into our platform. There's another piece of software, also open source, called Open Science Framework and if you're using that to manage your research lifecycle you can publish data into Dataverse from there. A new integration is RSpace. It's more of a lab notebook and so if you have all of your research in a lab notebook like RSpace, then you can publish your data into Dataverse.
