Web Animations API

--- a/animation.mdwn
+++ b/animation.mdwn
@@ -1,3 +1,5 @@
 [[krita]] can be used to create flip books.
 
 http://danielcwilson.com/blog/2015/07/animations-intro/ and http://rachelnabors.com/alice-in-videoland/book/ via http://shoptalkshow.com/episodes/203-with-rachel-nabors-and-dan-wilson/
+
+http://rachelnabors.com/waapi via http://thewebplatformpodcast.com/141-web-animations-api
